Made use of classes instead of straight object prototypes

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </tbody>
     </table>
   </div>
-  <script src="app.js"></script>
+  <script src="es6_classes_app.js"></script>
 </body>
 
 </html>
